launching search from the shell omits the search string in Software
Submitted by Andreas Nilsson
Link to original bug (#775144)
Description
Created attachment 340803 screenshot
to reproduce:
- search for, say, "Calibre" from the shell
- click the gnome-software icon with the little "+"-symbol on it
- the search shows up in gnome software
- However, the search bar in gnome software is now empty, even though there are search results below it