gs-shell: Searched text not shown when searching from command line

Rather than setting the search text directly, use the search entry,
which: a) shows the searched text; b) is consistent with in-application
searching, like not initiating the search with less than 3 letters.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/117
Closes https://gitlab.gnome.org/GNOME/gnome-software/-/merge_requests/509